<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_grey_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_moving_report"
            android:icon="@drawable/ic_moving_report_blue_24dp"
            android:title="@string/menu_moving_report" />
        <item
            android:id="@+id/nav_speed_report"
            android:icon="@drawable/ic_clock_speed"
            android:title="@string/menu_speed_report" />

        <item
            android:id="@+id/nav_distance_report"
            android:icon="@drawable/ic_route"
            android:title="@string/menu_distance_report" />
    </group>

    <group
        android:id="@+id/nav_second_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>
