<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ekc.ekctracking.view.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.ekc.ekctracking.view.fragments.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home"
            />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_moving_report"
        android:name="com.ekc.ekctracking.view.fragments.gallery.GalleryFragment"
        android:label="@string/menu_moving_report"
        tools:layout="@layout/fragment_moving_report" />

    <fragment
        android:id="@+id/nav_speed_report"
        android:name="com.ekc.ekctracking.view.fragments.slideshow.SlideshowFragment"
        android:label="@string/menu_speed_report"
        tools:layout="@layout/fragment_speed_report" />
</navigation>