<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <ViewAnimator
        android:id="@+id/home_fragment_view_animator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/home_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimary"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />


                    <ImageView
                        android:id="@+id/home_nav_drawer_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_menu_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/menu_home"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <com.miguelcatalan.materialsearchview.MaterialSearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <com.esri.arcgisruntime.mapping.view.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include layout="@layout/frag_home_cars_list_layout" />

            <include
                layout="@layout/home_bottom_sheet_2"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_frag_location_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:backgroundTint="@color/grey_light"
                app:fabSize="auto"
                app:srcCompat="@drawable/ic_my_location_white_24dp" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.MaterialComponents.DayNight">

            <ImageView
                android:id="@+id/moving_report_filter_close_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintBottom_toTopOf="@+id/moving_report_filter_div_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black_24dp" />

            <ImageView
                android:id="@+id/moving_report_filter_save_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintBottom_toTopOf="@+id/moving_report_filter_div_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_done_black_24dp" />

            <TextView
                android:id="@+id/moving_report_filter_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:text="@string/moving_report_car_title"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toTopOf="@+id/moving_report_filter_div_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/moving_report_filter_div_1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="?actionBarSize"
                android:background="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/moving_report_filter_car_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="ب ط ر 2 5 3 4 دبابة"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moving_report_filter_div_1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/moving_report_filter_date_outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:hint="@string/date_range"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moving_report_filter_car_no_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/moving_report_filter_date_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/moving_report_filter_time_outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time_rang_from"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/moving_report_filter_date_outlinedTextField"
                app:layout_constraintTop_toBottomOf="@+id/moving_report_filter_date_outlinedTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/moving_report_filter_time_from_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/moving_report_filter_time_to_outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time_rang_to"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="@+id/moving_report_filter_date_outlinedTextField"
                app:layout_constraintTop_toBottomOf="@+id/moving_report_filter_date_outlinedTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/moving_report_filter_time_to_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewAnimator>

</androidx.coordinatorlayout.widget.CoordinatorLayout>